crates/bonsaidb-macros/tests/collection/ui/invalid_attribute.stderr
error: Only `authority="some-authority"`, `name="some-name"`, `views(SomeView, AnotherView)` are supported attributes
 --> tests/collection/ui/invalid_attribute.rs:4:48
  |
4 | #[collection(name = "hi", authority = "hello", "hi")]
  |                                                ^^^^
